--- a/src/scss/components/_advantages.scss
+++ b/src/scss/components/_advantages.scss
@@ -9,7 +9,7 @@
   justify-content: space-between;
 }
 .advantage__title {
-  color: #212121;
+  color: $baseColor;
   font-weight: 700;
   letter-spacing: 0.42px;
   text-transform: uppercase;
@@ -17,7 +17,7 @@
   margin-bottom: 10px;
 }
 .advantage__text {
-  color: #757575;
+  color: $descriptionColor;
   line-height: 24px;
   letter-spacing: 0.42px;
   width: 270px;
@@ -30,7 +30,7 @@
 .advantage__photo {
   width: 270px;
   height: 120px;
-  background-color: #f5f4fa;
+  background-color: $subBackgroundColor;
   border-radius: 4px;
   display: flex;
   justify-content: center;
@@ -38,8 +38,8 @@
   margin-bottom: 30px;
 }
 .advantage__icon {
-  fill: #212121;
+  fill: $baseColor;
 }
 .advantage__icon:hover {
-  fill: #2196f3;
+  fill: $activeColor;
 }
