--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -8,7 +8,7 @@
   padding-left: 10%;
 }
 .list-contacts__link {
-  color: #757575;
+  color: $descriptionColor;
   font-size: 14px;
 
   font-weight: 500;
@@ -16,7 +16,7 @@
   letter-spacing: 0.28px;
 }
 .list-contacts__address {
-  color: #fff;
+  color: $subBaseColor;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.42px;
@@ -34,6 +34,6 @@
   margin-top: 20px;
 }
 .list-contacts a:hover {
-  color: #2196f3;
+  color: $activeColor;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
