--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -14,17 +14,17 @@
   gap: 53px;
 }
 .contacts {
-  color: #757575;
+  color: $descriptionColor;
   font-weight: 500;
   letter-spacing: 0.28px;
   display: flex;
   gap: 50px;
 }
 .nav__list li:hover {
-  color: #2196f3;
+  color: $activeColor;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contacts li:hover {
-  color: #2196f3;
+  color: $activeColor;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
