--- a/src/scss/components/_portfolio-main.scss
+++ b/src/scss/components/_portfolio-main.scss
@@ -17,8 +17,8 @@
   background: #f5f4fa;
 }
 .categories__item:hover {
-  background-color: #2196f3;
-  color: #fff;
+  background-color: $activeColor;
+  color: $activeColor;
   cursor: pointer;
 }
 .portfolio__content {
@@ -34,14 +34,14 @@
 }
 .project {
   width: 370px;
-  border: 1px solid #eee;
-  background: #fff;
+  border: 1px solid $borderColor;
+  background: $subBaseColor;
   position: relative;
   overflow: hidden;
 }
 .project:hover {
-  box-shadow: 1px 4px 6px 0px rgba(0, 0, 0, 0.16),
-    0px 4px 4px 0px rgba(0, 0, 0, 0.06), 0px 1px 1px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 1px 4px 6px 0px $shadowColor, 0px 4px 4px 0px rgba(0, 0, 0, 0.06),
+    0px 1px 1px 0px $shadowSub;
 }
 .project__overlay {
   padding: 20px 24px;
@@ -62,7 +62,7 @@
 }
 .project__overlay {
   transform: translateY(-100%);
-  background: rgba(33, 150, 243, 0.9);
+  background: $portfolioOverlay;
   width: 100%;
   height: 294px;
   position: absolute;
@@ -71,7 +71,7 @@
   left: 0;
 }
 .overlay__text {
-  color: #fff;
+  color: $subBaseColor;
   font-size: 18px;
   font-weight: 400;
   line-height: 28px;
