--- a/src/scss/components/_team.scss
+++ b/src/scss/components/_team.scss
@@ -1,5 +1,5 @@
 .team {
-  background-color: #f5f4fa;
+  background-color: $subBackgroundColor;
   padding: 95px 0;
 }
 .team__container {
@@ -16,7 +16,7 @@
   flex-basis: calc((100% - 90px) / 4);
 }
 .team__title {
-  color: #212121;
+  color: $baseColor;
   text-align: center;
   font-size: 36px;
   margin-bottom: 50px;
@@ -26,8 +26,8 @@
 .employee__photo {
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
-  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 2px 1px 0px $shadowSubColor,
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px $shadowSub;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +44,7 @@
   bottom: 108px;
 }
 .employee__name {
-  color: #212121;
+  color: $baseColor;
   text-align: center;
   font-size: 16px;
   font-weight: 500;
