--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,6 @@
 @import "./utils/variables";
-@import "./components/reset";
-@import "./components/global";
+@import "./global/reset";
+@import "./global/global";
 @import "./components/header";
 @import "./components/hero";
 @import "./components/advantages";
