змінив розположення файлів в webstudio

--- a/src/scss/portfolio.scss
+++ b/src/scss/portfolio.scss
@@ -3,9 +3,5 @@
 @import "./global/global";
 @import "./layout/header";
 @import "./components/mobile-menu";
-@import "./layout/hero";
-@import "./components/modal";
-@import "./layout/advantages";
-@import "./layout/cases";
-@import "./layout/team";
+@import "./layout/portfolio-main";
 @import "./layout/footer";
