--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -58,7 +58,7 @@
   opacity: 1;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero__is-hidden {
+.hero .is-hidden {
   opacity: 0;
   pointer-events: none;
 }
